--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Fira+Code&family=Inconsolata&family=JetBrains+Mono&family=Lato&family=Lexend+Deca&family=Montserrat&family=Nunito&family=Oxygen&family=Roboto&family=Roboto+Mono&family=Source+Code+Pro&family=Ubuntu&family=Ubuntu+Mono&display=swap"
     rel="stylesheet">
-  <title>Apetype</title>
+  <title>SwiftType</title>
 </head>
 
 <body>
